--- a/style.css
+++ b/style.css
@@ -14,68 +14,157 @@ p {
 
 
 /* PC用 */
-/* 横幅設定 */
-body {
-  margin: 0;
-  text-align: center;
-}
-header {
-  display: flex;
-  justify-content: space-around;
-  margin: 20px auto;
-  max-width: 1200px;
+@media screen and (min-width: 768px) {
+  body {
+    margin: 0;
+  }
+  header {
+    display: flex;
+    justify-content: space-around;
+    margin: 20px auto;
+    max-width: 1200px;
+  }
+
+  header a:link {
+    color: #000000;
+  }
+  header a:visited {
+    color: #000000;
+  }
+  header a:hover {
+    color: #000000;
+  }
+  header a:active {
+    color: #000000;
+  }
+  
+  header a {
+    color: #000000;
+    text-decoration: none;
+    font-size: 34px;
+    font-weight: bold;
+    padding: 0 15px;
+  }
+  
+  #logo {
+    border: 1px solid #000000;
+  }
+  
+  #main-img > img {
+    width: 100% ;
+    margin: 0;
+  }
+  
+  article  section {
+    max-width: 1200px;
+    margin: 0px auto;
+  }
+  
+  .style-h2 {
+    font-size: 34px;
+    text-align: center;
+    margin: 100px auto 70px auto;
+  }
+  
+  #about-contents {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  #about-left > img {
+    border-radius: 50%;
+    margin-left: 20px;
+  }
+  
+  #about-right {
+    margin-top: 40px;
+  }
+  
+  #works-contents {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 15%;
+  }
+  
+  #works-contents div {
+    flex-basis: 35%;
+    margin: 0 1%;
+  }
+  
+  #works-contents div img {
+    width: 100%;
+    height: auto;
+  }
+
+  #copyright {
+    text-align: center;
+  }
 }
 
-header a:link {
-  color: #000000;
-}
-header a:visited {
-  color: #000000;
-}
-header a:hover {
-  color: #000000;
-}
-header a:active {
-  color: #000000;
-}
+@media screen and (max-width: 767px) {
+  body {
+    margin: 0;
+    min-width: 375px
+  }
+  header {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 20px auto;
+  }
 
-header a {
-  color: #000000;
-  text-decoration: none;
-  font-size: 34px;
-  font-weight: bold;
-  padding: 0 15px;
-}
+  header a:link {
+    color: #000000;
+  }
+  header a:visited {
+    color: #000000;
+  }
+  header a:hover {
+    color: #000000;
+  }
+  header a:active {
+    color: #000000;
+  }
 
-#logo {
-  border: 1px solid #000000;
-}
+  header a {
+    color: #000000;
+    text-decoration: none;
+    font-size: 34px;
+    font-weight: bold;
+    padding: 0 15px;
+  }
+  #logo {
+    border: 1px solid #000000;
+    margin-left: 20px;
+  }
+  #main-img > img {
+    width: 100%;
+  }
 
-#main-img {
-  width: 100% ;
-  margin: 0;
-}
+  .style-h2 {
+    font-size: 34px;
+    text-align: center;
+    margin: 70px auto;
+  }
+  #about-contents > div {
+    margin: 0 auto;
+    width: fit-content;
+  }
+  #about-left > img {
+    border-radius: 50%;
+  }
+  #about-right {
+    padding-left: 10%;
+  }
 
-article > section {
-  margin: 20px auto;
-  max-width: 1200px;
+  .works-content {
+    text-align: center;
+    margin: 60px auto;
+  }
+  .works-content > img {
+    margin: 0 auto;
+  }
+  #copyright {
+    text-align: center;
+    margin: 40px auto;
+  }
 }
-
-#about {
-  margin: 100px auto;
-}
-
-#about-contents {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.style-h2 {
-  font-size: 34px;
-}
-
-#works-contents {
-  display: flex;
-  justify-content: space-around;
-}
-
